# grpc_apps

mapreduce/: CMakeLists.txt
mapreduce/include/: coordinator.h  worker.h
mapreduce/mrapps/: wc.cpp
mapreduce/protos/: rpc.proto
mapreduce/src/: coordinator.cpp  mrcoordinator.cpp  mrworker.cpp  worker.cpp
